# mandelbrot

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: main_window.cpp  main_window.h  worker.cpp  worker.h
